@@ -7,6 +7,7 @@ Changes for 1.9
 
 Changes for 1.8.3rc4
 
+ - [ZBX-2817] fixed history links for history and media types (Vedmak)
  - [ZBX-2833] fixed JS error in monitorin events screen (Aly)
  - [ZBX-2819] fixed showing trends for symbolic items (Vedmak)
  - [ZBX-2825] made profile form redirect to the last visited page on successful save (Aly)
